<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/food_wallpaper"
    tools:context=".HomepageActivity">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/droid_serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/viewGroceryListButton"

                android:layout_width="196dp"
                android:layout_height="43dp"
                android:layout_alignBottom="@+id/viewRecipesButton"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/buttonshape"
                android:text="@string/my_grocery_list"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/goToSettingsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/goToSettingsButton"

                android:layout_width="196dp"
                android:layout_height="43dp"
                android:layout_alignBottom="@+id/viewRecipesButton"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/buttonshape"
                android:text="@string/action_settings"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/newRecipeButton"

                android:layout_width="196dp"
                android:layout_height="43dp"
                android:layout_alignBottom="@+id/viewRecipesButton"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/buttonshape"
                android:text="@string/add_recipe"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/viewGroceryListButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/viewRecipesButton"

                android:layout_width="196dp"
                android:layout_height="43dp"
                android:layout_alignParentStart="true"

                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/buttonshape"
                android:text="@string/my_recipes"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/newRecipeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>